updates for ci-testing/headless